# gifenc-rs

./: .gitignore  Cargo.toml  README.md  package.json  tsconfig.json
docs/: index.html
docs/assets/: index-08cd2355.js  index-32aad0df.js  index-57f67c89.js  index-9e88d1db.js  index-a84ed751.css
pkg/: README.md  gif_encoder.d.ts  package.json
public/wasm/: gif_encoder_bg.wasm  gif_encoder_bg.wasm.d.ts
rust/: Cargo.toml  README.md
src/: App.vue  lib.rs
web/: README.md  package-lock.json  package.json  vite.config.ts
web/public/wasm/: gif_encoder.js  package.json
web/src/: App.vue
web/src/components/: iconButton.vue  image-input.vue
