[package]
name = "gifenc-rs"
version = "0.1.0"
edition = "2021"
# authors = ["Your Name <you@example.com>"]
author = "lilacs2039"
description = "WebAssembly GIF converter (callable from TypeScript) built from rust image crate."
license = "Unlicense"
repository = "https://github.com/yourgithubusername/hello-wasm"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
image = "0.24.5"

[profile.release]
lto = true
opt-level = "z"
codegen-units = 1
